# MixTaR

./: CMakeLists.txt  README.md
External_Binaries/: CMakeLists.txt  mreps.cmake  ssake.cmake
External_Libraries/: CMakeLists.txt  gatb-core-install.cmake  gatb-core.cmake  seqAn.cmake  sparsehash.cmake
src/: main.cpp  smallAssemblyFind.cpp  smallAssemblyOverlap.cpp
tests/: longReads.fasta  pairedShortReads_1.fasta  pairedShortReads_2.fasta  referenceSequence.fasta
